latex: starting to write down first results

--- a/Bachelorarbeit/bachelorarbeit.tex
+++ b/Bachelorarbeit/bachelorarbeit.tex
@@ -4,6 +4,8 @@
 \usepackage[utf8x]{inputenc}
 \usepackage[T1]{fontenc}
 \usepackage{lmodern}
+\usepackage{graphicx} 
+\usepackage{subfigure}
 \usepackage{geometry}
 \geometry{a4paper, left=2.5cm, right=2.5cm, top=2.5cm, bottom=3cm}
 
@@ -22,7 +24,22 @@
 	
 	\newpage
 	
-	\section{Einleitung}
+	\include{einleitung}
+	
+	\section{allg Problemstellung}
+	
+	\subsection{orginaler Algo}
+	//aus dem paper
+	
+	\subsection{neue interpreatation}
+	//wieso?
+	
+	\include{potenzialproblem}
+	
+	\section{cooperative gruppe}
+	// wird das behandelt???
+	
+	\section{Fazit}
 	
 	
 \end{document}
