latex: explain paper algo, inserted some figures

--- a/Bachelorarbeit/bachelorarbeit.tex
+++ b/Bachelorarbeit/bachelorarbeit.tex
@@ -6,6 +6,9 @@
 \usepackage{lmodern}
 \usepackage{graphicx} 
 \usepackage{subfigure}
+\usepackage{wrapfig}
+\usepackage{adjustbox}
+\usepackage{caption}
 \usepackage{geometry}
 \geometry{a4paper, left=2.5cm, right=2.5cm, top=2.5cm, bottom=3cm}
 
@@ -26,14 +29,8 @@
 	
 	\include{einleitung}
 	
-	\section{allg Problemstellung}
-	
-	\subsection{orginaler Algo}
-	//aus dem paper
-	
-	\subsection{neue interpreatation}
-	//wieso?
-	
+	\include{algorithmus}
+
 	\include{potenzialproblem}
 	
 	\section{cooperative gruppe}
