latex: explain algo modification

--- a/Bachelorarbeit/bachelorarbeit.tex
+++ b/Bachelorarbeit/bachelorarbeit.tex
@@ -9,6 +9,8 @@
 \usepackage{wrapfig}
 \usepackage{adjustbox}
 \usepackage{caption}
+%\usepackage{algorithmic}
+\usepackage{algpseudocode}
 \usepackage{geometry}
 \geometry{a4paper, left=2.5cm, right=2.5cm, top=2.5cm, bottom=3cm}
 
