--- a/Bachelorarbeit/potenzialproblem.tex
+++ b/Bachelorarbeit/potenzialproblem.tex
@@ -18,6 +18,7 @@ Da das Potenzial k beliebig groß ist, kann man eine Kante auf Kantengewicht 1 s
 
 \begin{figure}[h]
 	\subfigure[alle Kanten haben Gewicht 4. Alle Knoten benötigen mindestens 8 Agenten.]{\includegraphics[width=0.49\textwidth]{bilder/abb1.png}} 
+	\hfill
 	\subfigure[eine Kante wurde auf Gewicht 1 geduziert, alle anderen haben weiterhin Gewicht 4. Alle Knoten benötigen trotzdem mindestens 8 Agenten.]{\includegraphics[width=0.49\textwidth]{bilder/abb2.png}} 
 	\caption{Beispiel, dass Verringerung auf einer Kante nicht zu einer Verringerung der notwendigen Agenten führen muss} 
 \end{figure} 
