--- a/Bachelorarbeit/bachelorarbeit.tex
+++ b/Bachelorarbeit/bachelorarbeit.tex
@@ -9,13 +9,17 @@
 \usepackage{wrapfig}
 \usepackage{adjustbox}
 \usepackage{caption}
+\usepackage{enumitem}
+\usepackage {ulem}
 %\usepackage{algorithmic}
 \usepackage{algpseudocode}
 \usepackage{geometry}
 \geometry{a4paper, left=2.5cm, right=2.5cm, top=2.5cm, bottom=3cm}
 
 \title{Bachelorarbeit\\
-	Capture of an Indruder by Mobile Agents}
+	Algorithmische Lösung des Potenzial-Problems\\
+	auf Grundlage des Papers:\\
+	"Capture of an Indruder by Mobile Agents"}
 \author{Jens Harder}
 \date{\today}
 
@@ -35,7 +39,7 @@
 
 	\include{potenzialproblem}
 	
-	\section{cooperative gruppe}
+	\section{Kooperative Gruppe}
 	// wird das behandelt???
 	
 	\section{Fazit}
